[tool.poetry]
name = "arcadia"
version = "0.1.0"
description = ""
authors = ["brijhs <brijhs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
pymysql = "^1.1.0"
python = ">=3.10"
sshtunnel = "^0.4.0"
mysqlclient = "^2.2.0"
paramiko = "^3.2.0"
sqlalchemy = "^2.0.17"
pandasql = "^0.7.3"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
